--- a/html/gente/siguiendo.html
+++ b/html/gente/siguiendo.html
@@ -9,10 +9,9 @@
   </head>
   <body>
     <nav class="navbar">
-      <button class="atras" onclick="window.history.back()">
-        <i class="bi bi-arrow-left"></i> Atrás
+      <button class="atras" onclick="window.location.href='../perfil.html'">
+        <i class="bi bi-arrow-left" aria-label="Ir atrás"></i> Atrás
       </button>
-      <a class="home" href="home.html"></a>
     </nav>
     <div class="container">
       <h2 class="titulo">Siguiendo</h2>
