--- a/html/modales/mejorarPlan.html
+++ b/html/modales/mejorarPlan.html
@@ -5,11 +5,11 @@
     <div class="modal-buttons">
       <div class="option-container" onclick="buyOption1()">
         <img src="../../img/lvlPase/standardIco.png" alt="Imagen superior Opción 1" class="option-top" />
-        <img src="../../img/lvlPase/standard.png" alt="Opción 1" class="option-btn" />
+        <img src="../../img/lvlPase/standard.png" alt="Opción 1" class="option-btn" title="Estándar"/>
       </div>
       <div class="option-container" onclick="buyOption2()">
         <img src="../../img/lvlPase/premiumIco.png" alt="Imagen superior Opción 2" class="option-top" />
-        <img src="../../img/lvlPase/premium.png" alt="Opción 2" class="option-btn" />
+        <img src="../../img/lvlPase/premium.png" alt="Opción 2" class="option-btn" title="Premium"/>
       </div>
     </div>
   </div>
