--- a/html/perfil.html
+++ b/html/perfil.html
@@ -16,19 +16,21 @@
       <button class="atras" onclick="window.location.href='./home.html'">
         <i class="bi bi-arrow-left"></i> Atrás
       </button>
-      <a class="home" href="home.html"></a>
+      <a class="home" href="home.html" aria-label="Ir atrás"></a>
       <div class="icons">
         <img
           src="../ico/rank-bronce.ico"
           alt="Rango Bronce"
           class="icon-rank"
           onclick="window.location.href='./rangos.html'"
+          title="Rangos"
         />
-        <p class="saldo" id="openModalSaldo">Saldo: <span class="saldo-valor">0€</span></p>
+        <p class="saldo" id="openModalSaldo" title="Añadir Saldo">Saldo: <span class="saldo-valor">0€</span></p>
         <i
           class="bi bi-bell"
           id="openModalNotificaciones"
           style="font-size: 1.5rem; color: white;"
+          title="Notificaciones"
         ></i>
       </div>
     </nav>
@@ -55,19 +57,19 @@
 
       <!-- Sección de estadísticas de red social con enlaces -->
       <div class="social-stats">
-        <a href="./gente/amigos.html" class="stat-link">
+        <a href="./gente/amigos.html" class="stat-link" title="Amigos">
           <div class="stat">
             <h4>Amigos</h4>
             <p>3</p>
           </div>
         </a>
-        <a href="./gente/seguidores.html" class="stat-link">
+        <a href="./gente/seguidores.html" class="stat-link" title="Seguidores">
           <div class="stat">
             <h4>Seguidores</h4>
             <p>3</p>
           </div>
         </a>
-        <a href="./gente/siguiendo.html" class="stat-link">
+        <a href="./gente/siguiendo.html" class="stat-link" title="Siguiendo">
           <div class="stat">
             <h4>Siguiendo</h4>
             <p>3</p>
@@ -120,9 +122,9 @@
       <div class="gallery">
         <h2>Galería de Fotos</h2>
         <div class="gallery-images">
-          <img src="../img/perfiles/jagger.jpeg" alt="Foto 1" />
-          <img src="../img/perfiles/jagger.jpeg" alt="Foto 2" />
-          <img src="../img/perfiles/jagger.jpeg" alt="Foto 3" />
+          <img src="../img/perfiles/aquel.jpg" alt="Foto 1" />
+          <img src="../img/perfiles/jordypiscina.jpg" alt="Foto 2" />
+          <img src="../img/perfiles/kikor.jpg" alt="Foto 3" />
         </div>
       </div>
     </div>
