--- a/html/rangos.html
+++ b/html/rangos.html
@@ -82,6 +82,7 @@
     </div>
 
     <script src="../../js/battlePass.js"></script>
+    <script src="../js/efectosRangos.js"></script>
 
     </script>
   </body>
