--- a/html/battlePass/battlePass.html
+++ b/html/battlePass/battlePass.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="mission-icon" onclick="window.location.href='./misiones.html'">
-      <i class="bi bi-flag-fill"></i>
+      <i class="bi bi-flag-fill" title="Misiones"></i>
     </div>
 
     <div class="xp-bar">
@@ -101,6 +101,7 @@
         alt="Comprar Pase"
         class="buy-pass-btn"
         onclick="openModal()"
+        title="Comprar"
       />
     </div>
 
@@ -110,7 +111,7 @@
 
     <script src="../../js/mejorarPlan.js"></script>
     <script src="../../js/battlepass.js"></script>
-    <script src="../../js/efectos.js"></script>
+    <script src="../../js/relampagos.js"></script>
     <script>
       fetch('../modales/mejorarPlan.html')
         .then(response => response.text())
