--- a/html/gente/amigos.html
+++ b/html/gente/amigos.html
@@ -9,10 +9,9 @@
   </head>
   <body>
     <nav class="navbar">
-      <button class="atras" onclick="window.history.back()">
-        <i class="bi bi-arrow-left"></i> Atrás
+      <button class="atras" onclick="window.location.href='../perfil.html'">
+        <i class="bi bi-arrow-left" aria-label="Ir atrás"></i> Atrás
       </button>
-      <a class="home" href="home.html"></a>
     </nav>
     <div class="container">
       <h2 class="titulo">Amigos</h2>
@@ -23,7 +22,7 @@
             <span class="user-name">Amigo 1</span>
           </div>
           <a class="chat-button">
-            <i class="bi bi-send"></i>
+            <i class="bi bi-send" title="Chat"></i>
           </a>
         </li>
         <li>
@@ -32,7 +31,7 @@
             <span class="user-name">Amigo 2</span>
           </div>
           <a class="chat-button">
-            <i class="bi bi-send"></i>
+            <i class="bi bi-send" title="Chat"></i>
           </a>
         </li>
         <li>
@@ -41,7 +40,7 @@
             <span class="user-name">Amigo 3</span>
           </div>
           <a class="chat-button">
-            <i class="bi bi-send"></i>
+            <i class="bi bi-send" title="Chat"></i>
           </a>
         </li>
       </ul>
