--- a/html/home.html
+++ b/html/home.html
@@ -31,8 +31,8 @@
         <a class="home"><strong>SPORTIFY</strong></a>
       </div>
       <div class="icons">
-        <i id="openModalRegister" class="bi bi-person-plus"></i>
-        <i id="userIcon" class="bi bi-person"></i>
+        <i id="openModalRegister" class="bi bi-person-plus" title="Iniciar sesión/Registrarse"></i>
+        <i id="userIcon" class="bi bi-person" title="Perfil"></i>
       </div>
     </div>
 
@@ -86,6 +86,7 @@
       <button
         class="image-button"
         onclick="window.location.href='./battlePass/battlePass.html'"
+        title="Pase de batalla"
       >
         <img
           src="../ico/battlepass.ico"
@@ -281,6 +282,7 @@
         z-index: 3000;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       "
+      title="ChatBot"
     >
       <i class="fas fa-comment text-white text-[1.5rem]"></i>
     </div>
@@ -339,5 +341,6 @@
     <script src="../js/home.js"></script>
     <script src="../js/menu.js"></script>
     <script src="../js/pantallaCarga.js"></script>
+    <script src="../js/efectoFondo.js"></script>
   </body>
 </html>
